syntax="proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package chatv1;

option go_package = "github.com/javascriptizer1/grpc-cli-chat.backend/pkg/grpc/chat_v1;chatv1";


service ChatService {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc ConnectChat (ConnectChatRequest) returns (stream Message);
  rpc GetChatList(GetChatListRequest) returns (GetChatListResponse);
  rpc GetChat(GetChatRequest) returns (GetChatResponse);
  rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty);
}

message User {
  string id = 1;
  string name = 2;
}

message Chat {
  string id = 1;
  string name = 2;
}

message Message {
  string id = 1;
  User sender = 2;
  string text = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateChatRequest {
  repeated string userIDs = 1;
  string name = 2;
}

message CreateChatResponse {
  string id = 1;
}

message ConnectChatRequest {
  string user_id = 1;
  string chat_id = 2;
}


message GetChatListRequest {
    uint32 limit = 1;
    uint32 page = 2;
}

message GetChatListResponse {
   repeated Chat chats = 1;
   uint32 total = 2;
}

message GetChatRequest {
    string id = 1;
}

message GetChatResponse {
  string id = 1;
  string name = 2;
  repeated User users = 3;
}

message SendMessageRequest {
  string chat_id = 1;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}
